refactor: melhorando o código para pegar o id do usuário direto da 'sessão' do JWT